--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
     <script src="libs/tween.js"></script>
     
   </head>
+  
   <body>
+    <style>
+      * { margin: 0; padding: 0; cursor: none; }
+      body { background: #4C4076; }  
+    </style>
     <body>
         <script src="Utils.js"></script>
+        <script src="Word.js"></script>
         <script src="Rain.js"></script>
         <script src="Drop.js"></script>
         <script src="main.js"></script>
