--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
   
   <body>
     <style>
-      * { margin: 0; padding: 0; cursor: none; }
+      * { margin: 0; padding: 0; }
       body { background: #4C4076; }  
     </style>
     <body>
+        <script src="Frases.js"></script>
         <script src="Utils.js"></script>
         <script src="Word.js"></script>
         <script src="Rain.js"></script>
