--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
       body { background: #4C4076; }  
     </style>
     <body>
-        <script src="Frases.js"></script>
-        <script src="Utils.js"></script>
-        <script src="Word.js"></script>
-        <script src="Rain.js"></script>
-        <script src="Drop.js"></script>
+        <script src="src/Frases.js"></script>
+        <script src="src/Utils.js"></script>
+        <script src="src/Word.js"></script>
+        <script src="src/Rain.js"></script>
+        <script src="src/Drop.js"></script>
         <script src="main.js"></script>
         
     </body>
