Adicionando formatação as frases

--- a/index.html
+++ b/index.html
@@ -50,18 +50,27 @@
       transition: all .6s ease-in-out;
       font-family: 'Architects Daughter', cursive;
     }
-
     .texto.active {
       top: 50%;
       transform: translateX(-50%) translateY(-50%);
       opacity: 1.0;
     }
+    .pergunta {
+      color: red;
+    }
+
   </style>
 </head>
 
 <body>
   <div class="texto">
-    "alo"
+    <div class = "pergunta">
+      "Alo?:"
+    </div>
+    <div class = "resposta">
+      "alo"
+    </div>
+    
   </div>
 
   <script src="src/Frases.js"></script>
