Tentando achar erro

--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
     }
     .pergunta {
       color: #282828;
-      font-family: 'Noto Sans KR', sans-serif;
+      /*font-family: 'Noto Sans KR', sans-serif;*/
       font-size: 30px;
     }
     .resposta {
       color: #282828;
-      font-family: 'Montserrat', sans-serif;
+      /*font-family: 'Montserrat', sans-serif;*/
       font-size: 30px;
       font-weight: 100;
       letter-spacing: -0.25px;
