Terminando as frases

--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
       text-align: left;
       color: #282828;
       font-family: 'Montserrat', sans-serif;
-      
+      margin-left: 5%;
+      margin-right: 5%;
       font-weight: 100;
       letter-spacing: -0.25px;
       line-height: 1.25;
